# Coukoo

./: README.md  pyproject.toml
results/: labels.csv  scores.csv
src/: ImageProcessor.py  LSHProcessor.py  couckoo.py
tests/: test_couckoo.py  test_image_processor.py  test_lsh_processor.py
